--- a/bundle/config
+++ b/bundle/config
@@ -6,3 +6,6 @@ BUNDLE_GITHUB__HTTPS: "true"
 BUNDLE_GEM__TEST: "false"
 BUNDLE_GEM__MIT: "false"
 BUNDLE_GEM__COC: "false"
+BUNDLE_GEM__CI: "false"
+BUNDLE_GEM__CHANGELOG: "false"
+BUNDLE_GEM__LINTER: "rubocop"
